--- a/F2LLM/requirements.txt
+++ b/F2LLM/requirements.txt
@@ -1,7 +1,8 @@
-accelerate
-datasets
-deepspeed
-flash-attn
-torch
-transformers
-tensorboard
+accelerate==1.3.0
+datasets==2.21.0
+deepspeed==0.16.2
+flash-attn==2.3.6+pack.glm.mask
+torch==2.4.0+cu124
+transformers==4.51.0
+tensorboard==2.20.0
+peft==0.3.0
